src/main/docker/ingress.bak.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: barfitter-ingress
  namespace: barfitter
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: barfitter-svc
              servicePort: 8080
